# MOPSI

./: CMakeLists.txt  CMakeLists.txt.user.faad9dc  FirstValueFunction.txt  Test.txt  data.cpp  data.h  kuhn.cpp  kuhn.h  main.cpp  matrix.cpp  matrix.h  path.cpp  path.h  path.h.autosave
